# MicroHandGestureCollectorIWatch

./: .gitignore  MicroHandGestureCollectorIWatch-Watch-App-Info.plist  Package.swift  README.md
MicroHandGestureCollectorIWatch/: ActionDemoView.swift  AppSettings.swift  BlePeripheralService.swift  ChatView.swift  ChatViewModel.swift  CloudDataManagementView.swift  ContentView.swift  DataDetailView.swift  DataManagementView.swift  FeedbackManager.swift  FeedbackSettingsView.swift  GestureResult.swift  GestureSettingsView.swift  Info.plist  MessageHandlerService.swift  MicroHandGestureCollectorIWatchApp.swift  PhoneSettingsView.swift  SensorDataManager.swift  TetrisGame.swift  TetrisGameView.swift  TetrisView.swift  VideoRecordingService.swift  WatchSettingsView.swift
MicroHandGestureCollectorIWatch Watch App/: AppDelegate.swift  BackgroundSessionManager.swift  BleCentralService.swift  BlePairingView.swift  ContentView.swift  DataManagementView.swift  ExtendedRuntimeSessionManager.swift  ExtensionDelegate.swift  GestureRecognizer.swift  HealthKitBackgroundManager.swift  MicroHandGestureCollectorIWatch Watch App.entitlements  MicroHandGestureCollectorIWatch-Bridging-Header.h  MicroHandGestureCollectorIWatchApp.swift  MotionManager.swift  SettingsView.swift  SignalProcessor.swift  WatchConnectivityManager.swift
MicroHandGestureCollectorIWatch Watch App/cpp/: .gitignore  VQFBridge.h  VQFBridge.mm
MicroHandGestureCollectorIWatch Watch App/cpp/detrend_iir/: ButterworthFilterBridge.h  ButterworthFilterBridge.mm  CMakeLists.txt  butterworth_filter.cpp  butterworth_filter.hpp  butterworth_filter_bind.cpp  test_butterworth.py
MicroHandGestureCollectorIWatch Watch AppTests/: MicroHandGestureCollectorIWatch_Watch_AppTests.swift
MicroHandGestureCollectorIWatch Watch AppUITests/: MicroHandGestureCollectorIWatch_Watch_AppUITests.swift  MicroHandGestureCollectorIWatch_Watch_AppUITestsLaunchTests.swift
MicroHandGestureCollectorIWatch.xcodeproj/: project.pbxproj
MicroHandGestureCollectorIWatch.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
MicroHandGestureCollectorIWatch.xcodeproj/xcshareddata/xcschemes/: MicroHandGestureCollectorIWatch Watch App.xcscheme  MicroHandGestureCollectorIWatch.xcscheme
MicroHandGestureCollectorIWatch.xcodeproj/xcuserdata/wayne.xcuserdatad/xcschemes/: xcschememanagement.plist
MicroHandGestureCollectorIWatch/Assets.xcassets/AppIcon.appiconset/: Contents.json
MicroHandGestureCollectorIWatch/SharedConstants/: Package.swift
MicroHandGestureCollectorIWatch/SharedConstants/Tests/SharedConstantsTests/: SharedConstantsTests.swift
MicroHandGestureCollectorIWatchTests/: MicroHandGestureCollectorIWatchTests.swift
MicroHandGestureCollectorIWatchUITests/: MicroHandGestureCollectorIWatchUITests.swift  MicroHandGestureCollectorIWatchUITestsLaunchTests.swift
android/: .gitignore
android/app/: build.gradle
android/app/src/androidTest/java/com/wayne/android/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/wayne/android/: BlePeripheralService.java  MainActivity.java
android/app/src/main/java/com/wayne/android/tetris/: TetrisGame.java  TetrisView.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/test/java/com/wayne/android/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
pybind_libs/detrend_iir/: CMakeLists.txt  butterworth_filter_bind.cpp
python/: capture_log.py  convert_to_coreml.py  demo.py  mac_server.py  main.ipynb  realtime_plot.py  run_compare_result_of_pytorch_and_mlpackage.py  run_mlpackage_model.py  run_pytorch_model.py  smooth_plot.py  smooth_plot_show_demo.py  smooth_plot_show_filtered_peak.py
